[tool.poetry]
name = "nimbus"
version = "0.1.0"
description = "the nimbus project, dockerized. "
authors = ["Michael Fekadu <mike.fekadu@gmail.com>"]
license = "GPL-2.0"

[tool.poetry.dependencies]
python = "^3.6.8"
google = "^2.0.3"
transformers = "==2.4"
keras = "^2.3.1"
typing-extensions = "^3.7.4"
pyre-check = "^0.0.46"
termcolor = "^1.1.0"
pandas = "^1.0.3"
colorama = "^0.4.3"
ansicolors = "^1.1.8"
pdoc3 = "^0.8.1"
spacy = "^2.2.4"
numpy = "^1.18.4"
docopt = "^0.6.2"
sklearn = "^0.0"
rasa = "^1.10.1"
irc = "^18.0.0"
pydle = "^0.9.3"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.8.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
